--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "multer": "^2.0.2"
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
+    "pdfjs-dist": "^5.4.530"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
